Migrated lots of code to ~Java17, some cleanup